# janitor

./: .aider.chat.history.md  .aider.input.history  .codespell-ignore-words  .codespellrc  .containerignore  .devscripts  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .testr.conf  1  AUTHORS  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile_archive  Dockerfile_auto_upload  Dockerfile_base  Dockerfile_bzr_store  Dockerfile_database  Dockerfile_differ  Dockerfile_git_store  Dockerfile_irc_notify  Dockerfile_mail_filter  Dockerfile_mastodon_notify  Dockerfile_matrix_notify  Dockerfile_ognibuild_dep  Dockerfile_postgres  Dockerfile_publish  Dockerfile_runner  Dockerfile_site  Dockerfile_vcs_store  Dockerfile_vcs_store_bzr  Dockerfile_vcs_store_git  Dockerfile_worker  Dockerfile_xmpp_notify  IMPLEMENTATION-SUMMARY.md  (+104 more)
apt-repository/: Cargo.toml  README.md
apt-repository/src/: async_repository.rs  compression.rs  error.rs  hash.rs  lib.rs  packages.rs  release.rs  repository.rs  sources.rs
apt-repository/tests/: integration_tests.rs
archive/: Cargo.toml  porting-plan.md
archive/src/: config.rs  database.rs  error.rs  hashfilewriter.rs  lib.rs  main.rs  manager.rs  periodic.rs  redis.rs  repository.rs  rest.rs  scanner.rs  web.rs
archive/tests/data/: hello_2.10-3.debian.tar.xz  hello_2.10-3.dsc  hello_2.10-3_amd64.deb
auto-upload/: Cargo.toml  porting-plan.md
auto-upload/src/: artifacts.rs  backfill.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  message_handler.rs  process.rs  redis_client.rs  service.rs  upload.rs  utils.rs  web.rs
bzr-store/: Cargo.toml  PYBREEZY_INTEGRATION_STRATEGY.md  PYO3_IMPLEMENTATION_PLAN.md  porting-plan.md
bzr-store/src/: config.rs  database.rs  error.rs  lib.rs  main.rs  pyo3_bridge.rs  repository.rs  smart_protocol.rs  web.rs
common-py/: Cargo.toml  porting-plan.md
common-py/src/: artifacts.rs  config.rs  debdiff.rs  io.rs  lib.rs  logs.rs  queue.rs  vcs.rs
crates/config/: Cargo.toml  build.rs
crates/config/src/: lib.rs
crates/differ/: Cargo.toml
crates/mail-filter/: Cargo.toml
crates/mail-filter-py/: Cargo.toml
crates/mail-filter-py/src/: lib.rs
crates/mail-filter/src/: lib.rs  tests.rs
crates/publish/: Cargo.toml
crates/publish-py/: Cargo.toml
crates/publish/src/: lib.rs  ratelimit.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs  queue.rs
crates/worker/: Cargo.toml
crates/worker-py/: Cargo.toml
crates/worker-py/src/: lib.rs
differ/: Cargo.toml  b  porting-plan.md
differ-py/: Cargo.toml
differ-py/src/: lib.rs
differ/src/: .main.rs.swo  diffoscope.rs  error.rs  lib.rs  main.rs  test_utils.rs
differ/tests/: content_negotiation_tests.rs  error_handling_tests.rs  integration_tests.rs  performance_tests.rs  redis_integration_tests.rs
git-store/: Cargo.toml  README.md  config.example.toml  porting-plan.md
git-store/src/: config.rs  database.rs  error.rs  git_http.rs  lib.rs  main.rs  repository.rs  web.rs
mail-filter/: Cargo.toml  porting-plan.md
mail-filter/src/: lib.rs  tests.rs
publish/: API_VERIFICATION.md  Cargo.toml  porting-plan.md  x
publish-py/: Cargo.toml
publish-py/src/: lib.rs
publish/src/: lib.rs  lib_tests.rs  proposal_info.rs  publish_one.rs  publish_one_tests.rs  queue.rs  rate_limiter.rs  redis.rs  state.rs  web.rs
publish/tests/: api_parity_tests.rs  functional_tests.rs  integration_tests.rs  python_parity_verification.rs
runner/: API_COMPARISON.md  Cargo.toml  DATA_STRUCTURE_COMPARISON.md  TODO_IMPLEMENTATION_STATUS.md  VERIFICATION_SUMMARY.md  porting-plan.md
runner-py/: Cargo.toml
runner/src/: application.rs  artifacts.rs  auth.rs  backchannel.rs  builder.rs  config.rs  config_generator.rs  database.rs  error_tracking.rs  find_changes_tests.rs  lib.rs  logs.rs  main.rs  metrics.rs  performance.rs  queue.rs  resume.rs  test_utils.rs  tracing.rs  upload.rs  vcs.rs  watchdog.rs  web.rs
runner/tests/: api_parity_tests.rs  backchannel_tests.rs  comprehensive_api_tests.rs  config_compatibility_tests.rs  core_functionality_tests.rs  database_compatibility_tests.rs  integration_tests.rs  python_compatibility_tests.rs
site/: .gitignore  Cargo.toml  Makefile  about.rst  apt.rst  conf.py  credentials.rst  cupboard-porting-plan.md  download-assets.sh  generate.py  index.rst  lintian-brush-tags.txt  lintian-brush.rst  porting-plan.md  report-apt-repo.py  report-history.py  report-lintian-fixes-pkg.py  report-merge-proposals.py  report-pkg.py  report-queue.py  report-result-codes.py
site-py/: Cargo.toml  porting-plan.md
site-py/src/: lib.rs
site/apt/: index.rst
site/contact/: index.rst
site/cupboard/: index.rst
site/fresh-releases/: index.rst
site/fresh-snapshots/: index.rst
site/lintian-brush/: index.rst
site/lintian-fixes/: index.rst  lintian-brush.rst
site/migrations/: 20241129000001_initial.sql
site/result-codes/: .gitignore  401-without-www-authenticate.rst
site/src/: analyze.rs  app.rs  assets.rs  config.rs  database.rs  handlers.rs  lib.rs  logging.rs  main.rs  middleware.rs  realtime.rs  routes.rs  templates.rs  webhook.rs
site/templates/: 404.html  500.html  about.html  analytics.html  codebase.html  codeblock.html  credentials.html  debdiff-viewer.html  debug.html  diff-viewer.html  error.html  faq-api.html  faq-auto-push.html  faq-incorrect.html  faq-out-of-date-proposal.html  faq-supported-vcs.html  faq.html  footer.html  fresh-snapshots.html  history.html  index.html  layout.html  loading.html  log-index.html  log-viewer.html  login.html  logout.html  merge-proposal.html  merge-proposals.html  package-list.html  package-search.html  profile.html  queue.html  ready-list.html  repo-list.html  result-code.html  run.html  search_form.html  status.html  webhook.html
site/tests/: integration_tests.rs  python_parity_verification.rs
site/upstream-releases/: index.rst
site/upstream-snapshots/: index.rst
worker/: Cargo.toml
worker/src/: client.rs  client_tests.rs  lib.rs  lib_tests.rs  tee.rs  tee_tests.rs  vcs.rs  vcs_tests.rs  web.rs
worker/templates/: artifact_index.html
(+964 files in other folders)
