[package]
name = "janitor"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2021"
description = "Automated VCS change management platform"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"
build = "build.rs"

[dependencies]
breezyshim = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
env_logger = { workspace = true }
log = { workspace = true }
protobuf = "3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["postgres", "runtime-async-std-native-tls"] }
stackdriver_logger = { version = "0.8", optional = true }
url = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
pyo3 = { workspace = true }
silver-platter = { workspace = true }
tokio = { workspace = true, features = ["process"] }
regex = "1.10.6"
lazy-regex = "3.2.0"
fancy-regex = "0.13.0"
askama = "0.12"

[workspace.dependencies]
pyo3 = { version = "0.22" }
reqwest = { version = "0.12" }
pyo3-log = ">=0.11"
breezyshim = ">=0.1.173"
#breezyshim = { path = "../breezyshim/trunk" }
log = "0.4"
env_logger = ">=0.10"
serde = "1.0"
serde_json = "1.0"
url = "2"
chrono = "0.4"
clap = { version = "4" }
tokio = "1"
axum = "0.7"
maplit = "1"
silver-platter = "0.5"
#silver-platter = { path = "../silver-platter" }
ognibuild  = { git = "https://github.com/jelmer/ognibuild.git" }
pyo3-asyncio = { git = "https://github.com/jelmer/pyo3-asyncio", branch = "pyo3-0.22" }
shlex = "1"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"

[workspace]
members = [ "crates/*" ]

[features]
default = ["gcp"]
gcp = ["stackdriver_logger"]
