[package]
name = "janitor"
version = { workspace = true }
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2021"
description = "Automated VCS change management platform"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"
build = "build.rs"

[dependencies]
breezyshim = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
env_logger = { workspace = true }
log = { workspace = true }
protobuf = "3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
stackdriver_logger = { version = "0.8", optional = true }
url = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
pyo3 = { workspace = true }
silver-platter = { workspace = true }
tokio = { workspace = true, features = ["process", "rt-multi-thread"] }
regex = "1.11.0"
lazy-regex = "3.2.0"
fancy-regex = "0.14.0"
askama = "0.14"
futures = "0.3.30"
sqlx = { workspace = true, features = ["chrono"] }
sqlx-core = { workspace = true, features = ["chrono"] }
sqlx-postgres = { workspace = true, features = ["chrono"] }
async-trait = "0.1.88"
percent-encoding = "2.3.1"
tempfile.workspace = true
google-cloud-storage = { workspace = true, optional = true }
google-cloud-auth = { workspace = true, optional = true }
flate2 = "1.0.34"
async-compression = { version = "0.4.6", features = ["tokio", "gzip"] }
filetime = "0.2.25"
debversion = { workspace = true, optional = true, features = ["sqlx"] }
reqwest = { workspace = true, features = ["json"] }
debian-control = "0.1.28"
shlex.workspace = true
prometheus = { version = "0.14.0", features = ["reqwest"] }
buildlog-consultant = { workspace = true }
tracing = "0.1.41"

[workspace.dependencies]
rslock = { default-features = false, version = "0.5.1" }
static_assertions = "1.1.0"
debian-changelog = "0.2.0"
debian-analyzer = "0.158.25"
debversion = { version = "0.4" }
google-cloud-storage = "0.22.1"
google-cloud-auth = "0.17.2"
tempfile = "3.20.0"
redis = "0.27.5"
sqlx = { version = "^0.8", features = ["chrono", "postgres", "runtime-async-std-native-tls"] }
sqlx-postgres = { version = "^0.8", features = ["chrono", "time"] }
sqlx-core = { version = "^0.8", features = ["chrono"] }
pyo3 = { version = "0.22" }
reqwest = { version = "0.12" }
pyo3-log = ">=0.11"
breezyshim = ">=0.1.173"
#breezyshim = { path = "../breezyshim/trunk" }
log = "0.4"
env_logger = ">=0.10"
serde = "1.0"
serde_json = "1.0"
url = "2"
chrono = "0.4"
clap = { version = "4" }
tokio = "1"
axum = "0.8"
maplit = "1"
#silver-platter = { git = "https://github.com/jelmer/silver-platter" }
silver-platter = { version = ">=0.5.47" }
ognibuild  = "0.0.34"
pyo3-async-runtimes = "0.22"
shlex = "1"
buildlog-consultant = "0.1.1"
deb822-lossless = "0.2.4"
debian-control = "0.1.40"
pyo3-filelike = "0.4.0"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"

[workspace]
members = [ "common-py", "differ", "mail-filter", "publish-py", "publish", "runner-py", "runner", "worker" , "bzr-store", "git-store", "site", "site-py" , "archive", "auto-upload", "differ-py" ]

[workspace.package]
edition = "2021"
version = "0.1.0"

[features]
default = ["gcp", "gcs", "debian"]
debian = ["dep:debversion"]
gcp = ["stackdriver_logger", "gcs"]
gcs = ["dep:google-cloud-storage", "dep:google-cloud-auth"]
