[build-system]
requires = [
    "setuptools",
    "setuptools-protobuf[mypy]>=0.1.3",
    "setuptools-rust>=1.7.0",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    # No type hints yet
    "gpg.*",
    "aioredlock.*",
    "diffoscope.*",
    "ruamel.*",
    "aiohttp_apispec.*",
    "launchpadlib.*",
    "mimeparse.*",
    "google.cloud.logging.*",
    "klaus.*",
    "aiohttp_debugtoolbar.*",
    "fakeredis.*",
    "aiohttp_wsgi.*",
    # https://github.com/MagicStack/asyncpg/issues/387
    "asyncpg.*",
    "testing.*",
    "boto3.*",
    "google.protobuf.*",
    "pytest_asyncio.*",
]
ignore_missing_imports = true

[project]
name = "janitor"
authors = [{name = "Jelmer Vernooĳ", email = "jelmer@jelmer.uk"}]
description = "Manager for automatic VCS changes"
license = {text = "GNU GPL v2 or later"}
keywords = [
    "debian",
    "git",
    "bzr",
    "vcs",
    "github",
    "gitlab",
    "launchpad",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Version Control",
]
urls = {Homepage = "https://github.com/jelmer/janitor"}
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "aiohttp-apispec",
    "aiohttp_jinja2",
    "aiojobs",
    "aioredlock",
    "aiozipkin",
    "asyncpg",
    "backoff",
    "bs4",
    "python-mimeparse",
    "pygments",
    "breezy[git,launchpad,workspace,pgp]",
    "jinja2",
    "dulwich",
    "ognibuild",
    "buildlog-consultant",
    "silver-platter",
    "aiohttp-openmetrics",
    "paramiko",
    "redis>=4.2.0",
    "iso8601",
    "protobuf",
    "uvloop",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "djlint",
    "mock",
    "mypy",
    "yamllint",
    "testtools",
    "pytest",
    "pytest-cov",
    "pytest-aiohttp",
    "fakeredis",
    "python-subunit",
    "ruff==0.5.0",
    "types-PyYAML",
    "types-protobuf",
    "types-mock",
    "types-redis",
    "types-protobuf",
    "types-beautifulsoup4",
    "types-Pygments",
    "types-flask",
    "boto3",
    "types-boto3",
    "google-cloud-logging",
    "gcloud-aio-storage",
    "testing.postgresql",
]
debian = [
    "python_apt",
    "python_debian",
    "silver-platter[debian]",
    "ognibuild[debian,dep_server]",
    "brz-debian@git+https://github.com/breezy-team/breezy-debian",
    "iniparse",
]
gcp = [
    "gcloud-aio-storage",
    "google-cloud-logging",
]
s3 = ["boto3"]
git_web = [
    "klaus@git+https://github.com/jonashaag/klaus",
    "aiohttp-wsgi",
]
bzr_web = ["loggerhead"]

[project.scripts]
janitor-runner = "janitor.run:main"
janitor-publisher = "janitor.publish:main"
janitor-apt = "janitor.debian.archive:main"
janitor-git-store = "janitor.git_store:main"
janitor-bzr-store = "janitor.git_store:main"
janitor-differ = "janitor.differ:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = """
--cov=janitor
--cov-report=html"""

[tool.setuptools]
script-files = [
    "create-sbuild-chroot-schroot.py",
    "create-sbuild-chroot-unshare.py",
]
include-package-data = false

[tool.setuptools.packages.find]
where = ["py"]
include = ["janitor*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
"janitor.site" = [
    "templates/*.html",
    "templates/*/*.html",
    "_static/*.css",
    "_static/*.js",
    "_static/*.png",
]
janitor = ["state.sql"]
"janitor.debian" = ["debian.sql"]

[tool.setuptools.dynamic]
version = {attr = "janitor.__version__"}

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "W",
    "D",
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN101",  # missing-type-self
    "ANN102",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN206",
    "ANN401",
    "E501",
    "W293",
    "W291",
    "B905",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D417",
    "B007"
]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["py/janitor/config_pb2.py"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "./target,./build,./lib,*~"
ignore-words = ".codespell-ignore-words"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"lintian_brush".msg = "belongs in Debian Janitor"
"debmutate".msg = "not used directly"
"upstream_ontologist".msg = "not used"

[tool.setuptools-protobuf]
mypy = true
protobufs = [
    "py/janitor/config.proto"
]

[tool.ruff.lint.isort]
known-third-party = ["debian"]
