[build-system]
requires = [
    "setuptools",
    "setuptools-rust>=1.7.0",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    # No type hints yet
    "gpg.*",
    "aioredlock.*",
    "diffoscope.*",
    "ruamel.*",
    "aiohttp_apispec.*",
    "launchpadlib.*",
    "mimeparse.*",
    "google.cloud.logging.*",
    "klaus.*",
    "aiohttp_debugtoolbar.*",
    "fakeredis.*",
    "aiohttp_wsgi.*",
    # https://github.com/MagicStack/asyncpg/issues/387
    "asyncpg.*",
    "testing.*",
    "boto3.*",
    "pytest_asyncio.*",
    "silver_platter.*",
]
ignore_missing_imports = true

[project]
name = "janitor"
authors = [{name = "Jelmer Vernooĳ", email = "jelmer@jelmer.uk"}]
description = "Manager for automatic VCS changes"
license = {text = "GNU GPL v2 or later"}
keywords = [
    "debian",
    "git",
    "bzr",
    "vcs",
    "github",
    "gitlab",
    "launchpad",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Version Control",
]
urls = {Homepage = "https://github.com/jelmer/janitor"}
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "aiohttp-apispec",
    "aiohttp-jinja2",
    "aiohttp-openmetrics",
    "aiojobs",
    "aioredlock",
    "aiozipkin",
    "asyncpg",
    "backoff",
    "breezy[git,launchpad,workspace]",
    "bs4",
    "dulwich",
    #"gpg", # Using python3-gpg instead ~ https://github.com/jelmer/janitor/issues/931
    "iso8601",
    "jinja2",
    "launchpadlib",
    "paramiko",
    "pygments",
    "python-mimeparse",
    "redis>=4.2.0",
    "setuptools-rust",
    "silver-platter@git+https://github.com/jelmer/silver-platter.git/",
    "uvloop",
    "yarl",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
# Janitor service (./Dockerfile_archive)
archive = [
    "python-debian",
]
# Janitor service (./Dockerfile_auto_upload)
auto-upload = [
    "python-debian",
]
# Janitor service (./Dockerfile_bzr_store)
bzr-store = [
    "loggerhead",
    "python-debian",
]
# Janitor service (./Dockerfile_differ)
differ = [
    "diffoscope",
    "python-debian",
]
# Janitor service (./Dockerfile_git_store)
git-store = [
    "aiohttp-wsgi",
    "flask",
    "klaus@git+https://github.com/jonashaag/klaus",
    "python-debian",
]
# Janitor service (./Dockerfile_mail_filter)
mail-filter = [
]
# Janitor service (./Dockerfile_publish)
publish = [
    "python-debian",
]
# Janitor service (./Dockerfile_runner)
runner = [
    "python-debian",
]
# Janitor service (./Dockerfile_site)
site = [
    "python-debian",
]

# mypy ($ make typing)
typing = [
    "mypy",
    "gcloud-aio-storage",
    "python-debian",
    "pytest",
    "google-cloud-logging",
    "types-flask",
    "types-Pygments",
]

# unittest ($ make test)
test = [
    "fakeredis",
    "pytest",
    "pytest-aiohttp",
    "pytest-asyncio",
    "pytest-cov",
    "python-debian",
    "testing.postgresql",
    "testtools",
]

# Development (./CONTRIBUTING.md)
dev = [
    "aiohttp-debugtoolbar",
    "djlint",
    "marshmallow",
    "mock",
    "python-subunit",
    "ruff==0.11.2",
    "yamllint",
]

debian = [
    "brz-debian@git+https://github.com/breezy-team/breezy-debian",
    "iniparse",
    "ognibuild[debian,dep_server]",
    "python-debian",
    "silver-platter[debian]",
]

# Google Cloud Platform
gcp = [
    "gcloud-aio-storage",
    "google-cloud-logging",
]

s3 = [
    "boto3",
]

[project.scripts]
janitor-auto-upload = "janitor.debian.auto_upload:main"
janitor-archive = "janitor.debian.archive:main"
janitor-bzr-store = "janitor.git_store:main"
janitor-differ = "janitor.differ:main"
janitor-git-store = "janitor.git_store:main"
#janitor-mail-filter == rust
#janitor-ognibuild = "ognibuild.dep_server:main" # rust
janitor-publish = "janitor.publish:main"
janitor-runner = "janitor.runner:main"
janitor-site = "janitor.site.simple:main"
janitor-webhook = "janitor.site.webhook:main"
#janitor-worker == rust

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = """
--cov=janitor
--cov-report=html"""
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools]
script-files = [
    "create-sbuild-chroot-schroot.py",
    "create-sbuild-chroot-unshare.py",
]
include-package-data = false

[tool.setuptools.packages.find]
where = ["py"]
include = ["janitor*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
"janitor.site" = [
    "templates/*.html",
    "templates/*/*.html",
    "_static/*.css",
    "_static/*.js",
    "_static/*.png",
]
janitor = ["state.sql"]
"janitor.debian" = ["debian.sql"]

[tool.setuptools.dynamic]
version = {attr = "janitor.__version__"}

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "W",
    "D",
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN206",
    "ANN401",
    "E501",
    "W293",
    "W291",
    "B905",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D417",
    "B007"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "./target,./build,./lib,*~"
ignore-words = ".codespell-ignore-words"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"lintian_brush".msg = "belongs in Debian Janitor"
"debmutate".msg = "not used directly"
"upstream_ontologist".msg = "not used"

[tool.ruff.lint.isort]
known-third-party = ["debian"]
known-first-party = ["janitor"]

[tool.djlint]
close_void_tags=true
format_css=true
# format_js doesn't deal well with jinja2 {% %} tags
format_js=false
ignore="J018,H030,H031,H021"
profile="jinja"
