[flake8]
exclude = site/conf.py,silver-platter,lintian-brush,dulwich,.plugins,breezy,breezy-debian,janitor/*_pb2.py,.eggs,ognibuild,buildlog-consultant,upstream-ontologist,debmutate
extend-ignore = E203, E266, E501, W293, W291, E303, E501, W503
max-line-length = 88
max-complexity = 18
select = B,E,F,W,T4,B9

[mypy]
ignore_missing_imports = True

[tool:pytest]
asyncio_mode = auto
addopts =
    --cov=janitor
    --cov-report=html
    --cov-report=term-missing:skip-covered

[metadata]
name = janitor
author = Jelmer Vernooĳ
author_email = jelmer@jelmer.uk
url = https://github.com/jelmer/janitor
description = Manager for automatic VCS changes
version = attr:janitor.__version__
license = GNU GPL v2 or later
keywords =
    debian
    git
    bzr
    vcs
    github
    gitlab
    launchpad
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Topic :: Software Development :: Version Control

[options]
install_requires =
    aiohttp
    aiohttp_jinja2
    aioredis<2.0
    aiozipkin
    asyncpg
    backoff
    pygments
    lintian-brush@git+https://salsa.debian.org/jelmer/lintian-brush
    breezy[cext,git,launchpad,workspace,pgp]@git+https://github.com/breezy-team/breezy
    # "breezy@bzr+https://code.launchpad.net/brz
    jinja2
    ognibuild@git+https://github.com/jelmer/ognibuild
    buildlog-consultant@git+https://github.com/jelmer/buildlog-consultant
    upstream-ontologist@git+https://github.com/jelmer/upstream-ontologist
    silver-platter@git+https://github.com/jelmer/silver-platter
    aiohttp-openmetrics
packages =
    janitor
    janitor.tests
    janitor.site
    janitor_client

[options.entry_points]
console_scripts =
    janitor-runner=janitor.run:main
    janitor-worker=janitor.worker:main
    janitor-publisher=janitor.publish:main
    janitor-apt=janitor.debian.archive:main

[options.extras_require]
dev =
    flake8>=5.0.4
    djlint
    mypy
    testtools
    pytest
    pytest-cov
    pytest-aiohttp
    mypy-protobuf
    python-subunit
    types-PyYAML
    types-protobuf
debian =
    python-apt@git+https://salsa.debian.org/apt-team/python-apt
    python_debian
    debmutate@git+https://salsa.debian.org/jelmer/debmutate
    silver-platter[debian]@git+https://github.com/jelmer/silver-platter
    ognibuild[debian,dep_server]@git+https://github.com/jelmer/ognibuild
    brz-debian@git+https://github.com/breezy-team/breezy-debian
    # brz-debian@bzr+https://code.launchpad.net/brz-debian
gcp =
    gcloud-aio-storage
    google-cloud-logging
git =
    klaus
    aiohttp-wsgi
bzr = loggerhead
