[flake8]
exclude = janitor/*_pb2.py,.eggs
extend-ignore = E203, E266, E501, W293, W291, E303, E501, W503
max-line-length = 88
max-complexity = 18
select = B,E,F,W,T4,B9
banned-modules =
    lintian_brush = belongs in Debian Janitor

[mypy]
ignore_missing_imports = True

[tool:pytest]
asyncio_mode = auto
addopts =
    --cov=janitor
    --cov-report=html

[metadata]
name = janitor
author = Jelmer Vernooĳ
author_email = jelmer@jelmer.uk
url = https://github.com/jelmer/janitor
description = Manager for automatic VCS changes
long_description = file:README.md
long_description_content_type = text/markdown
version = attr:janitor.__version__
license = GNU GPL v2 or later
keywords =
    debian
    git
    bzr
    vcs
    github
    gitlab
    launchpad
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Topic :: Software Development :: Version Control

[options]
install_requires =
    aiohttp
    aiohttp-apispec
    aiohttp_jinja2
    aioredis<2.0
    aioredlock
    aiozipkin
    asyncpg
    backoff
    pygments
    # Add gitlab,github extras once those are supported by breezy
    breezy[git,launchpad,workspace,pgp]@git+https://github.com/breezy-team/breezy
    dulwich@git+https://github.com/jelmer/dulwich
    # "breezy@bzr+https://code.launchpad.net/brz
    jinja2
    dulwich@git+https://github.com/jelmer/dulwich
    ognibuild@git+https://github.com/jelmer/ognibuild
    buildlog-consultant@git+https://github.com/jelmer/buildlog-consultant
    upstream-ontologist@git+https://github.com/jelmer/upstream-ontologist
    silver-platter@git+https://github.com/jelmer/silver-platter
    aiohttp-openmetrics
    paramiko
    # TODO(jelmer): Move to a version of breezy that doesn't require iso8601
    iso8601
packages =
    janitor
    janitor.debian
    janitor.generic
    janitor.site
    janitor.site.cupboard
    janitor_client
setup_requires =
    setuptools
    setuptools-protobuf
    mypy-protobuf

[options.entry_points]
console_scripts =
    janitor-runner=janitor.run:main
    janitor-worker=janitor.worker:main
    janitor-publisher=janitor.publish:main
    janitor-apt=janitor.debian.archive:main
    janitor-git-store=janitor.git_store:main
    janitor-bzr-store=janitor.git_store:main
    janitor-differ=janitor.differ:main

[options.extras_require]
dev =
    flake8>=5.0.4
    flake8-tidy-imports
    djlint
    mock
    mypy
    yamllint
    testtools
    pytest
    pytest-cov
    pytest-aiohttp
    # Upstream doesn't support Python 3.10 yet
    mockaioredis@git+https://github.com/kblin/mockaioredis
    mypy-protobuf
    python-subunit
    types-PyYAML
    types-protobuf
debian =
    python_apt
    python_debian
    debmutate@git+https://salsa.debian.org/jelmer/debmutate
    silver-platter[debian]@git+https://github.com/jelmer/silver-platter
    ognibuild[debian,dep_server]@git+https://github.com/jelmer/ognibuild
    brz-debian@git+https://github.com/breezy-team/breezy-debian
    # brz-debian@bzr+https://code.launchpad.net/brz-debian
    # Used for create-schroot-*.py
    iniparse
gcp =
    gcloud-aio-storage
    google-cloud-logging
git_web =
    klaus
    aiohttp-wsgi
bzr_web = loggerhead

[options.package_data]
* = py.typed
janitor.site =
    templates/*.html
    templates/*/*.html
    _static/*.css
    _static/*.js
    _static/*.png
