[flake8]
exclude = janitor/*_pb2.py,.eggs,lib,share
extend-ignore = E203, E266, E501, W293, W291, E303, E501, W503, B950, B903, B905
max-line-length = 88
max-complexity = 18
select = B,E,F,W,T4,B9,I25
banned-modules =
    lintian_brush.* = belongs in Debian Janitor
    debmutate.* = not used directly
#  upstream_ontologist = not used

[tool:pytest]
asyncio_mode = auto
addopts =
    --cov=janitor
    --cov-report=html

[metadata]
name = janitor
author = Jelmer Vernooĳ
author_email = jelmer@jelmer.uk
url = https://github.com/jelmer/janitor
description = Manager for automatic VCS changes
long_description = file:README.md
long_description_content_type = text/markdown
version = attr:janitor.__version__
license = GNU GPL v2 or later
keywords =
    debian
    git
    bzr
    vcs
    github
    gitlab
    launchpad
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Topic :: Software Development :: Version Control

[options]
python_requires = >=3.9
scripts =
    create-sbuild-chroot-schroot.py
    create-sbuild-chroot-unshare.py
install_requires =
    aiohttp
    aiohttp-apispec
    aiohttp_jinja2
    aioredlock
    aiozipkin
    asyncpg
    backoff
    bs4
    pygments
    # Add gitlab,github extras once those are supported by breezy
    breezy[git,launchpad,workspace,pgp]@git+https://github.com/breezy-team/breezy
    # "breezy@bzr+https://code.launchpad.net/brz
    jinja2
    dulwich@git+https://github.com/jelmer/dulwich
    ognibuild@git+https://github.com/jelmer/ognibuild
    buildlog-consultant@git+https://github.com/jelmer/buildlog-consultant
    upstream-ontologist@git+https://github.com/jelmer/upstream-ontologist
    silver-platter@git+https://github.com/jelmer/silver-platter
    aiohttp-openmetrics
    paramiko
    redis>=4.2.0
    # TODO(jelmer): Move to a version of breezy that doesn't require iso8601
    iso8601
    protobuf
packages =
    janitor
    janitor.debian
    janitor.generic
    janitor.site
    janitor.site.cupboard
setup_requires =
    setuptools
    setuptools-protobuf[mypy]>=0.1.3

[options.entry_points]
console_scripts =
    janitor-runner=janitor.run:main
    janitor-worker=janitor.worker:main
    janitor-publisher=janitor.publish:main
    janitor-apt=janitor.debian.archive:main
    janitor-git-store=janitor.git_store:main
    janitor-bzr-store=janitor.git_store:main
    janitor-differ=janitor.differ:main
    janitor-mail-filter=janitor.mail_filter:main

[options.extras_require]
dev =
    flake8>=5.0.4
    flake8-tidy-imports
    flake8-bugbear
    flake8-simplify
    flake8-async
    djlint
    mock
    mypy
    yamllint
    testtools
    pytest
    pytest-cov
    pytest-aiohttp
    fakeredis
    python-subunit
    types-PyYAML
    types-protobuf
    types-mock
    types-redis
    types-protobuf
    types-beautifulsoup4
    types-Pygments
    types-flask
    boto3
    types-boto3
    google-cloud-logging
    gcloud-aio-storage
debian =
    python_apt
    python_debian
    silver-platter[debian]@git+https://github.com/jelmer/silver-platter
    ognibuild[debian,dep_server]@git+https://github.com/jelmer/ognibuild
    brz-debian@git+https://github.com/breezy-team/breezy-debian
    # brz-debian@bzr+https://code.launchpad.net/brz-debian
    # Used for create-schroot-*.py
    iniparse
gcp =
    gcloud-aio-storage
    google-cloud-logging
s3 = boto3
git_web =
    klaus
    aiohttp-wsgi
bzr_web = loggerhead

[options.package_data]
* = py.typed
janitor.site =
    templates/*.html
    templates/*/*.html
    _static/*.css
    _static/*.js
    _static/*.png
