[package]
name = "janitor-archive"
version.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.31"
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.41"
deb822-lossless.workspace = true
debian-control.workspace = true

# Archive-specific dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
bytes = "1.0"
tempfile = "3.0"
async-stream = "0.3"
async-trait = "0.1"
num_cpus = "1.0"

# Database integration
sqlx = { workspace = true, features = ["postgres", "chrono", "uuid", "migrate", "macros", "runtime-tokio-native-tls"] }

# Artifact management  
janitor = { path = ".." }

# APT repository generation
apt-repository = { path = "../apt-repository" }

# Web service dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "validate-request"] }
hyper = "1.0"
tokio-util = "0.7"
