[package]
name = "common-py"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
publish = false
edition.workspace = true
description = "Common bindings for the janitor - python"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/janitor.git"
homepage = "https://github.com/jelmer/janitor"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = {workspace = true, features=["serde", "chrono"]}
janitor = { path = ".." }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
pyo3-log = { workspace = true }
log = "0.4"
chrono = { workspace = true, features = ["serde"] }
breezyshim.workspace = true
silver-platter = { workspace = true, features = ["debian"] }
url.workspace = true
pyo3-asyncio = { workspace = true, features = ["tokio-runtime"] }
tokio.workspace = true

[features]
extension-module = ["pyo3/extension-module"]
